--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,15 +17,41 @@
     "@base-ui-components/react": "1.0.0-beta.5",
     "@hookform/resolvers": "^5.1.1",
     "@lective/api": "workspace:*",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.0.15",
     "@tanstack/react-form": "^1.12.3",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.114.25",
+    "@tiptap/core": "^3.10.8",
+    "@tiptap/extension-color": "^3.10.8",
+    "@tiptap/extension-heading": "^3.10.8",
+    "@tiptap/extension-highlight": "^3.10.8",
+    "@tiptap/extension-image": "^3.10.8",
+    "@tiptap/extension-link": "^3.10.8",
+    "@tiptap/extension-placeholder": "^3.10.8",
+    "@tiptap/extension-subscript": "^3.10.8",
+    "@tiptap/extension-superscript": "^3.10.8",
+    "@tiptap/extension-text-align": "^3.10.8",
+    "@tiptap/extension-text-style": "^3.10.8",
+    "@tiptap/extension-typography": "^3.10.8",
+    "@tiptap/extension-underline": "^3.10.8",
+    "@tiptap/pm": "^3.10.8",
+    "@tiptap/react": "^3.10.8",
+    "@tiptap/starter-kit": "^3.10.8",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "^11.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.473.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
@@ -34,6 +60,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.2.5",
+    "vaul": "^1.1.2",
     "zod": "catalog:"
   },
   "devDependencies": {
